# vehicle-register-

./: README.md  Spec.hs  VehicleRegister.hs  ci.yml  stack.yaml  vehicle-register.cabal
src/: Main.hs
