cabal-version:       3.0
name:                vehicle-register
version:             0.1.0.0
synopsis:            Simple CLI vehicle register (search/add/update/delete)
description:         A Haskell console app to manage a small in-memory vehicle register.
license:             MIT
license-file:        LICENSE
author:              You
maintainer:          you@example.com
build-type:          Simple
category:            CLI
extra-source-files:  README.md

library
  exposed-modules:     VehicleRegister
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >=4.14 && <5
  ghc-options:         -Wall

executable vehicle-register
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >=4.14 && <5, vehicle-register
  ghc-options:         -Wall -O2

test-suite vehicle-register-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base >=4.14 && <5, vehicle-register, hspec >=2.10, QuickCheck >=2.14
  ghc-options:         -Wall
